--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,8 @@ h2 {
   height: 50vh;
 }
 
+/* layer--1 and layer--2 are in the same container */
+
 .parallax-layer--1 {
   display: flex;
   justify-content: center;
@@ -57,7 +59,7 @@ h2 {
   background-repeat: no-repeat;
 
   transform: translateZ(-400px) scale(5) translateY(-57%);
-  z-index: 2;
+  z-index: 1;
 }
 
 .parallax-layer--2 {
@@ -78,6 +80,8 @@ h2 {
   z-index: 1;
 }
 
+/* layer--3 moves along */
+
 .parallax-layer--3 {
   display: flex;
   justify-content: center;
@@ -87,7 +91,28 @@ h2 {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 50vh;
+  height: 80vh;
+  background: url('./images/morant.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  /* background-attachment: fixed; */
+
+  transform: translateZ(-100px) scale(2) translateY(10%);
+}
+
+/* layer--4 stays fixed, no moving */
+
+.parallax-layer--4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
   background: url('./images/giannis.jpg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -106,28 +131,3 @@ h2 {
   max-width: 50%;
   margin: 0 auto;
 }
-
-/* Code from another parallax example, maybe try it again later */
-
-/* section:nth-child(1) {
-  background-image: url('/images/curry.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-section:nth-child(2) {
-  background-color: maroon;
-}
-
-section:nth-child(3) {
-  height: 40vh;
-  background-image: url('/images/leonard.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
-
-section:nth-child(4) {
-  background-color: rgb(18, 18, 90);
-}
- */
